// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should render with active link 1`] = `
<body>
  <div>
    <span
      class="bg-sky-500 dark:text-gray-50 flex items-center gap-3 py-2 px-3 font-medium"
    >
      <div>
        icon
      </div>
      Label
    </span>
  </div>
</body>
`;

exports[`NavLink should render with inactive link 1`] = `
<body>
  <div>
    <span
      class="text-gray-400 hover:text-gray-900 dark:hover:text-gray-200 flex items-center gap-3 py-2 px-3 font-medium"
    >
      <div>
        icon
      </div>
      Label
    </span>
  </div>
</body>
`;
